<?xml version="1.0"?>
<package>
  <name>gripbot_core_msgs</name>
  <version>1.2.0</version>
  <description>
    Messages and Services required for communication with the Baxter
    Research Robot from Rethink Robotics.
  </description>

  <maintainer email="contact@ynk.dev">
    Yannick Roberts
  </maintainer>
  <license>BSD</license>
  <url type="website">yannickroberts.com</url>
  <author>Yannick Roberts</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
